--- a/cv-project-web/src/components/homePageComponent/HomePageComponent.css
+++ b/cv-project-web/src/components/homePageComponent/HomePageComponent.css
@@ -1,10 +1,12 @@
 .aboutMe1{
     margin-top: 75px;
     font-size: 20px;
+    padding: 100px;
 }
 .aboutMe{
     margin-top: 30px;
 }
 .photo{
     max-width: 500px;
+    padding: 120px;
 }
